@@ -1,3 +1,7 @@
+2013-04-05  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with retaining allowed values when adding entries from data sources (Bug 317905).
+
 2013-03-27  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug with not properly escaping text in CSV exporter (Bug 317473).
